# sqlagent

./: .gitignore  243hw2.db  Makefile  README.md  pyproject.toml  requirements.txt
sqlagent/: main.py
sqlagent/templates/: identity.md
sqlagent/tools/: execute_script.py  get_table_tool.py  make_query.py
src/sqlagent/: main.py
src/sqlagent/templates/: explanation.md  initial.md  issue_command.md
src/sqlagent/tools/: execute_script_tool.py  get_columns_tool.py  get_table_tool.py  list_files_tool.py  make_query_tool.py  write_script_tool.py
templates/: initial.md
tests/: test_tools.py
tools/: write_script.py
